--- a/css/ui-feedback.css
+++ b/css/ui-feedback.css
@@ -2,27 +2,11 @@
     flex-flow: column wrap;
     max-height: -webkit-fill-available;
     place-content: flex-start;
+    pointer-events: none;
 }
 
 .snackbar {
-    margin: 0.2rem;
     width: 40%;
-    padding: 0.75rem 1rem;
-    border: 1px solid;
-    border-color: #ece2b6 #875526 #733726 #dfbc9a;
-    border-radius: 2px;
-    background: #000 url('../images/popup/dark_noise.jpg');
-    background-image: url('../images/popup/shaded_borders_soft.png'),url('../images/popup/dark_noise.jpg');
-    background-size: 100% 100%,auto;
-    background-color: #000;
-    border-radius: 2px;
-    box-shadow: 0px 0px 1px 2px rgba(0,0,0,0.5), 0px 2px 4px rgba(0,0,0,0.25), 0px 0px 2px 2px #000 inset, 0px 1px 0px 1px rgba(255,255,255,0.5) inset;
-    text-shadow: 0px 1px 1px #000;
-    color: #ccc;
-    word-break: break-word;
-}
-
-.snackbar {
     max-height: -webkit-fill-available;
 }
 
@@ -32,6 +16,7 @@
     top: 0.75rem;
     right: 0.75rem;
     cursor: pointer;
+    pointer-events: all;
 }
 
 #dialog-container {
@@ -42,28 +27,14 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.dialog {
-    padding: 0.75rem 1rem;
-    border: 1px solid;
-    border-color: #ece2b6 #875526 #733726 #dfbc9a;
-    border-radius: 2px;
-    background: #000 url('../images/popup/dark_noise.jpg');
-    background-image: url('../images/popup/shaded_borders_soft.png'),url('../images/popup/dark_noise.jpg');
-    background-size: 100% 100%,auto;
-    background-color: #000;
-    border-radius: 2px;
-    box-shadow: 0px 0px 1px 2px rgba(0,0,0,0.5), 0px 2px 4px rgba(0,0,0,0.25), 0px 0px 2px 2px #000 inset, 0px 1px 0px 1px rgba(255,255,255,0.5) inset;
-    text-shadow: 0px 1px 1px #000;
-    color: #ccc;
-    word-break: break-word;
-}
-
 .fade-in {
     animation: fade-in 0.3s ease-out;
+    animation-fill-mode: forwards;
 }
 
 .fade-out {
     animation: fade-out 0.3s ease-out;
+    animation-fill-mode: forwards;
 }
 
 @keyframes fade-in {
